<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/label_magnitude"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_marginRight="8dp"
        android:background="@drawable/magnitude_circle"
        tools:text="@string/label_mag_text" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/textColorEarthquakeDetails"
            tools:text="@string/label_coord"/>

        <TextView
            android:id="@+id/label_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textColor="@color/textColorEarthquakeLocation"
            android:paddingRight="5dp"
            tools:text="@string/label_place"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="@string/label_date" />

        <TextView
            android:id="@+id/label_time"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/label_time"/>

    </LinearLayout>


</LinearLayout>
